[tool.poetry]
name = "venn"
version = "0.1.0"
description = ""
authors = ["user28060 <nour.kired22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^3.0.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
